unpackaged/main/default/objects/OrderItem/fields/Additionnal_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additionnal_Discount_Amount__c</fullName>
    <formula>SBQQ__QuoteLine__r.Additionnal_Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additionnal Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>