unpackaged/main/default/objects/OrderItem/fields/Amendment_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Service_Level__c</fullName>
    <formula>/*if( Coming_from_Zuora__c = true , Text(SBQQ__Quote__r.Original_Service_Level__c) , TEXT(SBQQ__Quote__r.Service_Level__c) )*/
TEXT(SBQQ__QuoteLine__r.Service_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Service Level</label>
    <type>Text</type>
</CustomField>