unpackaged/main/default/objects/OrderItem/fields/Coming_from_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Coming_from_Zuora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coming from Zuora</label>
    <type>Checkbox</type>
</CustomField>