unpackaged/main/default/objects/OrderItem/fields/Designation_Produit__c.field-meta.xml
<CustomField>
    <fullName>Designation_Produit__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Product__r.Name</formula>
    <label>Désignation Produit</label>
    <type>Text</type>
</CustomField>