unpackaged/main/default/objects/OrderItem/fields/General_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>General_Terms_And_Conditions__c</fullName>
    <label>General Terms And Conditions</label>
    <type>Url</type>
</CustomField>