unpackaged/main/default/objects/OrderItem/fields/Gross_Total__c.field-meta.xml
<CustomField>
    <fullName>Gross_Total__c</fullName>
    <formula>SBQQ__QuoteLine__r.ListPrice_Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>