unpackaged/main/default/objects/OrderItem/fields/Incremented_Name__c.field-meta.xml
<CustomField>
    <fullName>Incremented_Name__c</fullName>
    <formula>SBQQ__QuoteLine__r.Incremented_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremented Name</label>
    <type>Text</type>
</CustomField>