unpackaged/main/default/objects/OrderItem/fields/ListUnitPrice_Display__c.field-meta.xml
<CustomField>
    <fullName>ListUnitPrice_Display__c</fullName>
    <label>Gross Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>