unpackaged/main/default/objects/OrderItem/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__QuoteLine__r.Tech_NetTotal_Template__c)),SBQQ__QuoteLine__r.Tech_NetTotal_Template__c,If(ISNUMBER(SUbstitute(SBQQ__QuoteLine__r.NetTotal_Template__c,",",".")),VALUE(SUbstitute(SBQQ__QuoteLine__r.NetTotal_Template__c,",",".")),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>