unpackaged/main/default/objects/OrderItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Product__r.Product_Line__r.Name</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>