unpackaged/main/default/objects/OrderItem/fields/QuantityforSI__c.field-meta.xml
<CustomField>
    <fullName>QuantityforSI__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuantityforSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>