unpackaged/main/default/objects/OrderItem/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <label>Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>