unpackaged/main/default/objects/OrderItem/fields/Special_Comment__c.field-meta.xml
<CustomField>
    <fullName>Special_Comment__c</fullName>
    <formula>SBQQ__QuoteLine__r.Special_Comment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Comment</label>
    <type>Text</type>
</CustomField>