unpackaged/main/default/objects/OrderItem/fields/StructureLevel1__c.field-meta.xml
<CustomField>
    <fullName>StructureLevel1__c</fullName>
    <formula>TEXT( SBQQ__QuoteLine__r.SBQQ__Product__r.Family )</formula>
    <label>StructureLevel1</label>
    <type>Text</type>
</CustomField>