unpackaged/main/default/objects/OrderItem/fields/StructureLevel2__c.field-meta.xml
<CustomField>
    <fullName>StructureLevel2__c</fullName>
    <formula>TEXT( SBQQ__QuoteLine__r.SBQQ__Product__r.StructureLevel2__c )</formula>
    <label>StructureLevel2</label>
    <type>Text</type>
</CustomField>