unpackaged/main/default/objects/OrderItem/fields/Subscribed_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Total__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__NetTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscribed Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>