unpackaged/main/default/objects/OrderItem/fields/SubscriptionId_from_Zuora__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId_from_Zuora__c</fullName>
    <label>SubscriptionId from Zuora</label>
    <length>40</length>
    <type>Text</type>
</CustomField>