unpackaged/main/default/objects/OrderItem/fields/Tech_Order_Product_Record__c.field-meta.xml
<CustomField>
    <fullName>Tech_Order_Product_Record__c</fullName>
    <formula>HYPERLINK("/" &amp; Id ,OrderItemNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Order Product Record</label>
    <type>Text</type>
</CustomField>