unpackaged/main/default/objects/OrderItem/fields/TECH_ProductName__c.field-meta.xml
<CustomField>
    <fullName>TECH_ProductName__c</fullName>
    <description>US W-001599 - BtoB_US28_mail de confirmation de commande</description>
    <formula>Product2.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>