unpackaged/main/default/objects/OrderItem/fields/Weighted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Unit_Price__c</fullName>
    <formula>SBQQ__QuoteLine__r.Weighted_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>